# rt-v3c-content

./: .gitattributes  LICENSE  README.md  README_dash_server.md
on-device-data/: config.json
on-device-data/data/: library.json
on-device-data/data/DanceB_4GOP_V19/: LICENSE-DanceB.md  danceB-0000.bit  danceB-0001.bit  danceB-0002.bit  danceB-0003.bit
on-device-data/data/Mannequin_QP32-32_5GOP_V19/: LICENSE-Mannequin.txt  TMIV_Mannequin_t0000.bit  TMIV_Mannequin_t0001.bit  TMIV_Mannequin_t0002.bit  TMIV_Mannequin_t0003.bit  TMIV_Mannequin_t0004.bit
on-device-data/data/S41C2RAR05_footprod_1GOP_R24/: LICENSE-footprod.txt  S41C2RAR05_footprod.hjif
tools/: README.md
tools/v3c-dash-packager/: README.md
tools/v3c-dash-packager/bin-bento4/: README.md  generate.sh
tools/vpcc-generation-tools/: .gitignore  README.md
tools/vpcc-generation-tools/createVpccChuncks/: create.py
tools/vpcc-generation-tools/createVpccChuncks/source/: CMakeLists.txt  build_win64.py
tools/vpcc-generation-tools/createVpccChuncks/source/vpccchunkcreator/: CMakeLists.txt
tools/vpcc-generation-tools/createVpccChuncks/source/vpccchunkcreator/include/: groupofframes.h  sequence.h  vpccinputparser.h
tools/vpcc-generation-tools/createVpccChuncks/source/vpccchunkcreator/src/: groupofframes.cpp  sequence.cpp  vpccchunkcreator.cpp
tools/vpcc-generation-tools/encodePly/: encode.py  footprod.cfg  seq_vox10.cfg  seq_vox11.cfg
tools/vpcc-generation-tools/test/: chunkcreation.sh  encodePly.sh
